--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,3 +17,12 @@ tasks:
   migration-down:
     cmds:
       - goose -dir {{.MIGRATION_DIR}} postgres "{{.MIGRATION_DSN}}" down -v
+
+  generate:
+    cmds:
+      - |
+        protoc \
+          --proto_path=protos/proto \
+          --go_out=protos/gen/go --go_opt=paths=source_relative \
+          --go-grpc_out=protos/gen/go --go-grpc_opt=paths=source_relative \
+          protos/proto/auth/v1/auth.proto
